Add all flags.